Completion of basic functionality
Challenge runs ladder and updates all rankings.  Hack for empty ladder
(first challenger plays against self).  Commented out all Challenger 
queue code--will remove with next update.

Still to do: lots of code cleanup and refactoring; addition of features to
track match results for later 3D replay.

--- a/templates/ladder/index.html
+++ b/templates/ladder/index.html
@@ -20,6 +20,7 @@
 	<i>No results yet.</i>
 {% endif %}
 
+{% comment %}
 <h2>Challenge Queue</h2>
 {% if challengers_list %}
 	<table border="1" cellpadding="4" cellspacing="0">
@@ -36,8 +37,9 @@
 {% else %}
 	<i>No challenges pending.</i>
 {% endif %}
+{% endcomment %}
 
-<h3>Add a Challenge</h3>
+<h3>Make a Challenge</h3>
 <form action="/challenge/" method="post">
 {% csrf_token %}
 <table border="0">
