Add challenge view to show just results of current ladder run.

--- a/templates/ladder/index.html
+++ b/templates/ladder/index.html
@@ -21,7 +21,7 @@
 {% endif %}
 
 <h3>Make a Challenge</h3>
-<form action="/challenge/" method="post">
+<form action="challenge/" method="post">
 {% csrf_token %}
 <table border="0">
 <tr><td>Your CS user id (e.g., jtk):</td><td><input type="text" name="userid" /></td></tr>
