Fixed "Winner:" parsing and simplified challenge return to ladder.
The Winner parsing now skips (.*) over any trace output that might have been generated.

The challenge submit button was using a "post", but not sending any data (which wasn't necessary), so simplified to use a "get" instead.

--- a/templates/ladder/challenge.html
+++ b/templates/ladder/challenge.html
@@ -22,6 +22,7 @@
 	<i>No results (error?).</i>
 {% endif %}
 <br />
-<form action="/ladder/" method="post">
-{% csrf_token %}
+
+<form action="/ladder/">
 <input type="submit" value="Return to Ladder">
+</form>
