Update to reorganize media files (including admin media).
Not complete yet, and not tested for Apache serving, but does work on
Mac with runserver.

--- a/templates/ladder/index.html
+++ b/templates/ladder/index.html
@@ -1,7 +1,7 @@
 {% if error_message %}<p><strong>{{ error_message}}</strong></p>{% endif %}
 
 <h2>Purdue Competitive Programming Class</h2>
-<!-- <img src="view1-small.png" /> -->
+<a href="{{ STATIC_URL }}view1-full.png"><img src="{{ STATIC_URL }}view1-small.png" align=right hspace=50></a>
 <h1>ICYPC Competition Ladder</h1>
 
 <h2>Current Rankings</h2>
